--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="personal projects">Personal Projects</a></li>
+                        <li><a href="#" data-nav-section="miscellaneous">Miscellaneous</a></li>
                      </ul>
                   </div>
                </nav>
@@ -201,36 +202,28 @@
 
                                     <div class="container">
                                        <div class="skill-box">
-                                          <p size="8"> <b>🤖 Artificial Intelligence </b></p> 
+                                          <b>🤖 Artificial Intelligence </b>
                                           <img src="https://img.shields.io/badge/PyTorch-EE4C2C?style=for-the-badge&logo=pytorch&logoColor=white" height="25">
-                                          <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25"> <br>
+                                          <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/Keras-FF0000?style=for-the-badge&logo=keras&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/OpenCV-27338e?style=for-the-badge&logo=OpenCV&logoColor=white" height="25">
-                                       </div>
-                                       &nbsp;
-                                       <div class="skill-box">
-                                          <p size="8"> <b>☁ Cloud</b></p> 
+                                          <br>
+                                          <b>☁ Cloud</b>
                                           <img src="https://img.shields.io/badge/microsoft%20azure-0089D6?style=for-the-badge&logo=microsoft-azure&logoColor=white" height="25">
-                                       </div>
-                                       <div class="skill-box">
-                                          <p size="8"> <b>⚡ Database</b></p> 
+                                          <br>
+                                          <b>⚡ Database</b>
                                           <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" height="25">
-                                       </div>
-                                       
-                                       <br>
-                                       <div class="skill-box">
-                                          <p size="8"> <b>👨‍💻 Programming</b></p> 
+                                          <br>
+                                          <b>👨‍💻 Programming</b>
                                           <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white" height="25">
-                                          <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" height="25"> <br>
+                                          <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/Numpy-777BB4?style=for-the-badge&logo=numpy&logoColor=white" height="25"> 
-                                          <img src="https://img.shields.io/badge/Pandas-2C2D72?style=for-the-badge&logo=pandas&logoColor=white" height="25"> <br>
+                                          <img src="https://img.shields.io/badge/Pandas-2C2D72?style=for-the-badge&logo=pandas&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/Plotly-239120?style=for-the-badge&logo=plotly&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/SciPy-654FF0?style=for-the-badge&logo=SciPy&logoColor=white" height="25"> 
                                           <img src="https://img.shields.io/badge/ScikitLearn-F7931E?style=for-the-badge&logo=scikit-learn&logoColor=white" height="25">
-                                       </div>
-                                       &nbsp;
-                                       <div class="skill-box">
-                                          <p size="8"> 💻 Dev</p> 
+                                          <br>
+                                          <b>💻 Dev</b> 
                                           <img src="https://img.shields.io/badge/Visual%20Studio%20Code-0078D4?style=for-the-badge&logo=visual-studio-code&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GIT-E44C30?style=for-the-badge&logo=git&logoColor=white" height="25">
                                           <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" height="25">
@@ -333,7 +326,7 @@
                </section>
 
                <!--------Passions---------->
-               <section class="colorlib-experience" data-section="personal projects">
+               <section class="colorlib-experience" data-section="miscellaneous">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
